# ccmgr

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE.md  DENESTED_AGENT_PANE.md  README.md
src/ccmgr/: atomic_file.py  cli.py  codex_index.py  config.py  discovery.py  favorites.py  fuzzy.py  launcher.py  models.py  path_codec.py  scroll_agent.py  scroll_manager.py  session_cache.py  session_index.py  tmux_ctl.py  transcript.py
src/railmux/: __init__.py  atomic_file.py  cli.py  codex_index.py  config.py  diagnostics.py  discovery.py  display_transport.py  fast_display_client.py  fast_display_protocol.py  fast_display_server.py  favorites.py  function_key_manager.py  help_workspace.py  launcher.py  (+15 more)
tests/: conftest.py  test_agent_workspace.py  test_atomic_file.py  test_cli.py  test_codex_delete.py  test_codex_index.py  test_codex_transcript.py  test_config.py  test_denested_transport_benchmark.py  test_diagnostics.py  test_discovery.py  test_display_transport.py  test_fast_full_window.py  test_focus_highlight.py  test_fullscreen_binding.py  test_function_key_manager.py  test_fuzzy.py  test_help_agent.py  test_help_workspace.py  test_history_cleanup.py  test_keymap.py  test_launcher.py  test_layout_profile.py  test_modals.py  test_mode_selection.py  test_new_project.py  test_options.py  test_orphan_recovery.py  test_pane_surface.py  test_path_codec.py  test_projects_pane.py  test_release_notes.py  test_release_workflow.py  test_renames.py  test_restart_state.py  test_running_pane.py  test_running_sort.py  test_scroll_agent.py  test_scroll_manager.py  test_session_cache.py  (+17 more)
tools/: denested_transport_benchmark.py  release_notes.py  wheel_smoke.py
web/: package-lock.json  react-router.config.ts  vite.config.ts
(+28 files in other folders)
