[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railmux"
dynamic = ["version"]
description = "Terminal UI to navigate, resume, and start Claude Code and Codex sessions"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Rightglow", email = "zhang.taian@foxmail.com"},
]
keywords = ["claude", "claude-code", "tmux", "tui", "session-manager", "terminal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
dependencies = [
  "packaging>=23.0",
  "tomlkit>=0.13.2,<1",
  "urwid>=2.6.16",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
ssh = [
  "pyte>=0.8.2,<0.9",
]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
  "ruff>=0.9",
  "pyte>=0.8.2,<0.9",
]

[project.scripts]
railmux = "railmux.cli:main"

[project.urls]
Homepage = "https://github.com/Rightglow/Railmux"
Repository = "https://github.com/Rightglow/Railmux"
Issues = "https://github.com/Rightglow/Railmux/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "railmux.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
